albums-service/k8s/base/albums_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: albums-mysql
  labels:
    app: albums-service
    app.openshift.io/runtime: java
    app.kubernetes.io/part-of: right-lyrics
  name: albums-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: albums-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: albums-service
    spec:
      containers:
        - image: quay.io/right-lyrics/albums-service:1.0
          imagePullPolicy: Always
          name: albums-service
          ports:
            - containerPort: 8080
