albums-service/k8s/base/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: albums-mariadb
    app.openshift.io/runtime: mariadb
    app.kubernetes.io/part-of: right-lyrics
  name: albums-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: albums-mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: albums-mariadb
    spec:
      containers:
        - image: registry.access.redhat.com/rhscl/mariadb-102-rhel7
          imagePullPolicy: Always
          name: albums-mariadb
          ports:
            - containerPort: 3306
