albums-service/k8s/base/mysql_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: albums-mysql
    app.openshift.io/runtime: mysql
    app.kubernetes.io/part-of: right-lyrics
  name: albums-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: albums-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: albums-mysql
    spec:
      containers:
        - image: registry.redhat.io/rhscl/mysql-80-rhel7:latest
          imagePullPolicy: Always
          name: albums-mysql
          ports:
            - containerPort: 3306
