albums-service/k8s/base/albums_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: albums-service
  name: albums-service
spec:
  ports:
    - name: tcp-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: albums-service
