albums-service/k8s/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: albums-mariadb
  name: albums-mariadb
spec:
  ports:
    - name: tcp-3306
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: albums-mariadb
