albums-service/k8s/base/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: songs-service
  name: songs-postgresql
spec:
  ports:
    - name: tcp-3306
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: songs-postgresql
